# nanoGPT-moe

./: .gitignore  model.py  moe_layer.py  pyproject.toml  standalone-qwen3-moe (3).ipynb  todo.md  train.ipynb
Qwen3-Coder-30B-A3B-Instruct/: README.md  config.json
assets/: 01_nanogpt.md
model/: __init__.py  gpt.py  moe_layer.py
moe_post/: model.py
processed/alpaca-ptbr/: dataset_info.json  state.json
scripts/: 01_train_nanogpt.py  __init__.py
